--- a/src/sections/Projects.css
+++ b/src/sections/Projects.css
@@ -1,3 +1,15 @@
 .projectBox {
-    background-color: rgb(71 85 105);
+    /* background-color: rgb(71 85 105); */
+}
+
+.projectButton {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  /* font-size: 1em; */
+  /* font-weight: 500; */
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
